<resources>
    <string name="app_name">Ember3</string>
    <string name="search_button">Search</string>
    <string name="placeholder1">delete me lol</string>
    <string name="title_activity_results_page">ResultsPage</string>
    <string name="rating_button">Add a Rating Filter</string>
    <string name="genre_button">Add a Genre Filter</string>
    <string name="date_button">Add a Date Filter</string>
    <string name="name_button">Search by Name</string>
    <string name="actor_button">Search by Actor</string>
    <string name="director_button">Search by Director</string>
    <string name="action_settings">Settings</string>
</resources>
