<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchOptionsActivity">

    <RadioGroup
        android:id="@+id/radioGroupGRD"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/radioGroupNAD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton">

        <RadioButton
            android:id="@+id/radioButtonGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genre_button" />

        <RadioButton
            android:id="@+id/radioButtonRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_button" />

        <RadioButton
            android:id="@+id/radioButtonDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_button" />
    </RadioGroup>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="searchOnClick"
        android:text="@string/search_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupNAD"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/radioGroupGRD"
        app:layout_constraintTop_toBottomOf="@+id/searchButton" >

        <RadioButton
            android:id="@+id/radioButtonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_button" />

        <RadioButton
            android:id="@+id/radioButtonActor"
            android:layout_width="match_parent"
            android:text="@string/actor_button"
            android:layout_height="wrap_content"
            />

        <RadioButton
            android:id="@+id/radioButtonDirector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/director_button" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>